# pinot-index-benchmarking

./: README.md  bench.py  demo_queries.py  gen_index_map_size_csv.py  gen_plots.ipynb  get_file_size.sh  get_index_file_size.sh  idx_size_out_to_csv.py  locustfile.py  pyproject.toml  results.csv  results_basic.csv  results_st_10g.csv  tbl_to_csv.py
ingestion_config/: job_spec_tpch_lineitem_1g_no_idx.yml
results/index_size/: 10g_bitmap_idx.csv  10g_no_idx.csv  10g_sort_idx.csv  10g_star_idx.csv  1g_bitmap_idx.csv  1g_no_idx.csv  1g_sort_idx.csv  1g_star_idx.csv  1g_star_tree_size.csv  1g_startree_size.csv
results/star_tree_index_size_T/csv_out_star_T_server_1/: 1g_star_idx_10000_index_map_sizes_server1.csv  1g_star_idx_10000_sizes_server1.csv  1g_star_idx_1000_index_map_sizes_server1.csv  1g_star_idx_1000_sizes_server1.csv  1g_star_idx_100_index_map_sizes_server1.csv  1g_star_idx_100_sizes_server1.csv  1g_star_idx_10_index_map_sizes_server1.csv  1g_star_idx_10_sizes_server1.csv
results/star_tree_index_size_T/csv_out_star_T_server_2/: 1g_star_idx_10000_index_map_sizes_server2.csv  1g_star_idx_10000_sizes_server2.csv  1g_star_idx_1000_index_map_sizes_server2.csv  1g_star_idx_1000_sizes_server2.csv  1g_star_idx_100_index_map_sizes_server2.csv  (+3 more)
schema/: tpch_lineitem.json
table_configs/: no_index_10g.json  no_index_1g.json  range_idx.json  star_tree_10g.json  tpch_lineitem_10g_bitmap_idx.json  tpch_lineitem_10g_no_idx.json  tpch_lineitem_10g_sort_idx.json  tpch_lineitem_10g_star_idx_100  tpch_lineitem_1g_star_idx_10.json  tpch_lineitem_1g_star_idx_1000.json
(+22 files in other folders)
